--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ Flask-GoogleMaps==0.2.6
 Flask-Moment==0.6.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+geographiclib==1.49
+geopy==1.18.0
 idna==2.7
 isodate==0.6.0
 itsdangerous==1.1.0
@@ -38,6 +40,7 @@ PyJWT==1.6.4
 pymongo==3.7.2
 pytest==4.0.1
 python-dateutil==2.7.5
+pytz==2018.7
 requests==2.20.1
 requests-oauthlib==1.0.0
 six==1.11.0
